9.3/python/_sources/geosoft.gxpy.rst.txt
.. _gxpy:

gxpy modules reference
======================

The :mod:`geosoft.gxpy` modules provide a Python-oriented API that takes advantage of Python to simplify
much of the complexity of the `low-level GX API <geosoft.gxapi.html>`__.

Submodules
----------

The following sub-modules organize functions into logical groups.

.. currentmodule:: geosoft.gxpy

.. autosummary::
   :toctree:

   geosoft.gxpy.agg
   geosoft.gxpy.coordinate_system
   geosoft.gxpy.dataframe
   geosoft.gxpy.gdb
   geosoft.gxpy.geometry
   geosoft.gxpy.grid
   geosoft.gxpy.group
   geosoft.gxpy.gx
   geosoft.gxpy.map
   geosoft.gxpy.metadata
   geosoft.gxpy.project
   geosoft.gxpy.system
   geosoft.gxpy.utility
   geosoft.gxpy.va
   geosoft.gxpy.view
   geosoft.gxpy.viewer
   geosoft.gxpy.vv
   
See https://github.com/GeosoftInc/gxpy/tree/master/examples for example scripts that use the Python modules.

See https://github.com/GeosoftInc/gxpy/tree/master/geosoft/gxpy/tests for tests that exercise the gxpy modules.

.. automodule:: geosoft.gxpy
    :members:
    :undoc-members:
    :show-inheritance: